--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,9 @@ code {
   padding: 25px 20px;
   background: #e5e8ea;
   margin-bottom: 10px;
+  font-size: 1.5em;
+  color: hsla(0, 0%, 100%, 0.7);
+  background-color: #24292e;
 }
 
 .fight-btn {
